src/components/AsideHeader/AsideHeader.module.scss
@use '../variables';

$block: '.#{variables.$ns}aside-header';

.g-root {
    --gn-aside-top-panel-height: 0px;
}

#{$block} {
    $class: &;
    --gn-aside-header-min-width: #{variables.$aside-header-min-width};

    --_--item-height: #{variables.$item-height};
    --_--item-margin-inline: #{variables.$item-margin-inline};
    --gn-aside-header-item-expanded-radius: #{variables.$item-expanded-radius};
    --gn-aside-header-header-divider-height: #{variables.$header-divider-height};

    --_--background-color: var(--g-color-base-background);
    --_--decoration-collapsed-background-color: var(--g-color-base-warning-light);
    --_--decoration-expanded-background-color: var(--g-color-base-warning-light);
    --_--vertical-divider-line-color: var(--g-color-line-generic);
    --_--horizontal-divider-line-color: var(--g-color-line-generic);

    height: 100%;
    width: 100%;
    position: relative;
    background-color: var(--g-color-base-background);

    &__aside {
        position: sticky;
        top: var(--gn-top-alert-height, 0);
        left: 0;
        height: 100vh;
        width: inherit;
        display: flex;
        flex-direction: column;
        transition: width 150ms ease-in-out;
        background-color: var(
            --gn-aside-header-expanded-background-color,
            var(--gn-aside-header-background-color, var(--_--background-color))
        );
        z-index: var(--gn-aside-header-z-index, 100);
        max-height: calc(100vh - var(--gn-top-alert-height, 0));
        margin-top: var(--gn-top-alert-height, 0);

        box-sizing: border-box;

        &::after {
            position: absolute;
            top: 0;
            right: 0;
            z-index: 2;
            width: 1px;
            height: 100%;
            content: '';
            background-color: var(
                --gn-aside-header-divider-vertical-color,
                var(--_--vertical-divider-line-color)
            );
        }

        &-popup-anchor {
            position: absolute;
            inset: 0;
            z-index: 1;
        }

        &-content {
            --gradient-height: 334px;

            display: flex;
            flex-direction: column;
            overflow: hidden;
            width: inherit;
            height: inherit;
            position: relative;
            z-index: 2;
            user-select: none;

            padding-top: var(--gn-aside-header-padding-top);

            & > #{$class}-logo {
                margin: 8px 0;
            }
        }

        &-content_with-decoration {
            background: linear-gradient(
                180deg,
                var(
                        --gn-aside-header-decoration-expanded-background-color,
                        var(--_--decoration-expanded-background-color)
                    )
                    calc(var(--gradient-height) * 0.33),
                transparent calc(var(--gradient-height) * 0.88)
            );
        }

        &-custom-background {
            position: absolute;
            top: 0;
            bottom: 0;

            display: flex;
            width: var(--gn-aside-header-size);

            z-index: -1;
        }

        &_compact-mode {
            --_--item-height: #{variables.$item-height-compact};
            --_--item-margin-inline: #{variables.$item-margin-inline-compact};
            --_--item-collapsed-radius: #{variables.$item-expanded-radius-compact};
            --gn-aside-header-item-expanded-radius: #{variables.$item-expanded-radius-compact};
            --gn-aside-header-header-divider-height: #{variables.$header-divider-height-compact};
            --gn-aside-header-min-width: #{variables.$aside-header-min-width-compact};
        }
    }

    &_collapsed &__aside {
        background-color: var(
            --gn-aside-header-collapsed-background-color,
            var(--gn-aside-header-background-color, var(--_--background-color))
        );

        &-content {
            background: transparent;
        }
    }

    &__aside-transition {
        &-enter,
        &-enter-active,
        &-enter-done,
        &-exit,
        &-exit-active {
            position: fixed;
            top: 0;
            left: 0;

            & + #{$class}__content {
                padding-left: var(--gn-aside-header-min-width);
            }
        }
    }

    &__content {
        width: 100%;
        margin-top: var(--gn-top-alert-height, 0);
        z-index: var(--gn-aside-header-content-z-index, 95);

        &_expanded-by-hover {
            padding-left: var(--gn-aside-header-min-width);
        }
    }

    &__header {
        position: relative;
        z-index: 1;
        flex: none;
        box-sizing: border-box;
        width: calc(100%);
        padding-top: 8px;
        padding-bottom: 25px;
        background-color: var(--gn-aside-top-decoration-background-color);

        #{$class}__header-divider {
            position: absolute;
            bottom: 0;
            left: 0;
            z-index: -2;
            display: none;
            color: var(
                --gn-aside-header-decoration-collapsed-background-color,
                var(--_--decoration-collapsed-background-color)
            );
        }

        &_with-decoration::before {
            position: absolute;
            top: 0;
            left: 0;
            z-index: -2;
            display: none;
            width: 100%;
            height: calc(100% - var(--gn-aside-header-header-divider-height));
            content: '';
            background-color: var(
                --gn-aside-top-divider-color,
                var(
                    --gn-aside-header-decoration-collapsed-background-color,
                    var(--_--decoration-collapsed-background-color)
                )
            );
        }

        &::after {
            position: absolute;
            bottom: 12px;
            left: 0;
            z-index: -2;
            width: 100%;
            height: 1px;
            content: '';
            background-color: var(
                --gn-aside-header-divider-horizontal-color,
                var(--_--horizontal-divider-line-color)
            );
        }
    }

    &_collapsed &__header {
        &::before {
            display: block;
        }
    }

    &_collapsed &__header_with-decoration {
        #{$class}__header-divider {
            display: block;
        }

        &::after {
            display: none;
        }
    }

    &__logo-button {
        margin-bottom: 2px;
    }

    &__logo-container {
        display: flex;
        align-items: center;
        justify-content: space-between;
        margin-inline: var(--_--item-margin-inline);
        margin-bottom: 2px;

        &_without-logo {
            padding-bottom: var(--g-spacing-2);
            margin-bottom: var(--g-spacing-2);
            border-bottom: solid 1px var(--g-color-line-generic);
        }
    }

    &__logo-button &__logo-icon-place {
        height: var(--_--item-height);
        width: var(--_--item-height);
    }

    &__menu-items {
        flex-grow: 1;
    }

    &__menu-item:not(:has([data-type='action'])) {
        margin-inline: var(--_--item-margin-inline);
    }

    &__footer {
        flex-shrink: 0;
        margin: var(--g-spacing-2) var(--_--item-margin-inline);
        display: flex;
        flex-direction: column;
        background-color: var(--gn-aside-bottom-background-color);

        &_horizontal {
            margin: 0;
        }
    }

    &__panels {
        z-index: var(--gn-aside-header-panel-z-index, 98);

        &,
        &:global(.g-drawer) {
            position: fixed;
            inset: var(--gn-top-alert-height, 0) 0 0;
        }
    }

    &__panel {
        &,
        &:global(.g-drawer__item) {
            top: var(--gn-top-alert-height, 0);
            bottom: 0;
            height: auto;
        }
    }

    &__pane-container {
        display: flex;
        outline: none;
        overflow: visible;
        user-select: text;
        flex-direction: row;
    }

    &__top-alert {
        --gn-drawer-z-index: var(--gn-aside-header-panel-z-index, 98);
        position: fixed;
        top: 0;
        background: var(--g-color-base-background);
        width: 100%;
    }

    &__pin-button {
        margin-left: auto;

        &_collapsed {
            margin-right: auto;
        }
    }

    &__panel-content {
        height: 100%;
    }

    &__all-pages-panel {
        /**
        * This is a way to fix the width of the panel.
        * This is necessary because the panel is a sliding element and has a built-in width.
        * Since we don't know what width the content will have, we use important to adjust the width to the content.
        */
        /* stylelint-disable-next-line */
        width: fit-content !important;
    }
}

